test/loopFixedPoint6.slq

def test1(){
	x:=H(0:ğ”¹);
	y:=H(0:ğ”¹);
	z:=dup(x);
	while measure(H(0:ğ”¹)){
		z=dup(y);
	}
	//forget(H(x)=0);
	//forget(H(y)=0);
	forget(z); // ok
	measure(x,y);
}

def test2(){
	x:=H(0:ğ”¹);
	y:=H(0:ğ”¹);
	z:=dup(x);
	while measure(H(0:ğ”¹)){
		z=dup(y);
	}
	forget(H(x)=0);
	forget(z); // error
	forget(H(y)=0);
}

def test3(){
	x:=H(0:ğ”¹);
	y:=H(0:ğ”¹);
	z:=dup(x);
	while measure(H(0:ğ”¹)){
		z=dup(y);
	}
	forget(H(y)=0);
	forget(z); // error
	forget(H(x)=0);
}
